import("//mises/base/mises_base_shared_preferences_java.gni")
import("//mises/components/permissions/android/java_sources.gni")
import("//mises/android/feed/mises_feed_java_sources.gni")
import("//mises/third_party/open_mediation/buildflags.gni")
import("//mises/android/features/tab_ui/mises_tab_management_java_sources.gni")
import("//mises/browser/hub/internal/android/java/java_sources.gni")

kiwi_java_sources = [
  "//mises/android/java/org/chromium/chrome/browser/PersonalizeResults.java",
  "//mises/android/java/org/chromium/chrome/browser/FixDevToolsWindow.java",
  "//mises/android/java/org/chromium/chrome/browser/accessibility/settings/NightScalePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/translate/settings/TranslateSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/translate/settings/RadioButtonGroupTranslatePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/TabSwitcherSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/Web3Settings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/RadioButtonGroupTabSwitcherPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/ToolbarSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/NightModeSettings.java",
  "//mises/android/java/org/chromium/chrome/browser/settings/RadioButtonGroupNightModePreference.java",
  "//mises/android/java/org/chromium/chrome/browser/init/ChromeBrowserReferrer.java",
  
  "//mises/android/java/org/chromium/chrome/browser/compositor/layouts/ChromeAnimation.java",
  "//mises/android/java/org/chromium/chrome/browser/init/InAppUpdater.java",
 
]

mises_java_sources = kiwi_java_sources + [
  "//mises/android/java/org/chromium/chrome/browser/appmenu/MisesTabbedAppMenuPropertiesDelegate.java",
  "//mises/android/java/org/chromium/chrome/browser/app/appmenu/AppMenuIconRowFooter.java",
  "//mises/android/java/org/chromium/chrome/browser/app/appmenu/MisesAppMenuPropertiesDelegateImpl.java",
  "//mises/android/java/org/chromium/chrome/browser/externalnav/MisesExternalNavigationHandler.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/ENSSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupENSResolveMethodPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/RadioButtonGroupUnstoppableDomainsResolveMethodPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/decentralized_dns/settings/UnstoppableDomainsSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/ipfs/settings/IPFSSettingsFragment.java",
  "//mises/android/java/org/chromium/chrome/browser/ipfs/settings/RadioButtonGroupIPFSGatewayPreference.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNewTabPage.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNewTabPageLayout.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/MisesNtpAdapter.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/NewsFlowService.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/News.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/CarouselAdapter.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/TileGroupDelegateWrapper.java",
  "//mises/android/java/org/chromium/chrome/browser/ntp/OnMisesNtpListener.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesMostVisitedTilesLayoutBase.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesMostVisitedTilesMediator.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesTileView.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/tile/MisesTileRenderer.java",
  "//mises/android/java/org/chromium/chrome/browser/suggestions/MisesSiteSuggestion.java",
  "//mises/android/java/org/chromium/chrome/browser/crypto_wallet/BraveWalletCustomTabActivity.java",
  "//mises/android/java/org/chromium/chrome/browser/tasks/MisesReturnToChromeUtil.java",
  #"//mises/android/java/org/chromium/chrome/browser/crypto_wallet/permission/BraveDappPermissionPromptDialog.java",
  #"//mises/android/java/org/chromium/chrome/browser/crypto_wallet/permission/BravePermissionAccountsListAdapter.java",
  #"//misesandroid/java/org/chromium/chrome/browser/crypto_wallet/util/AccountsPermissionsHelper.java",



  "//mises/android/java/org/chromium/chrome/browser/util/TabUtils.java",
  "//mises/android/java/org/chromium/chrome/browser/util/MisesTouchUtils.java",
  "//mises/android/java/org/chromium/chrome/browser/util/TouchDelegateComposite.java",
  
  

  "//mises/android/java/org/chromium/chrome/browser/toolbar/MisesHomeButton.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/MisesToolbarManager.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BookmarksButton.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarConfiguration.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarNewTabButton.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BottomToolbarVariationManager.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/MisesBottomControlsCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/MisesScrollingBottomViewResourceFrameLayout.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarLinearLayout.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarMediator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarModel.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/BrowsingModeBottomToolbarViewBinder.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/SearchAccelerator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarMediator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarModel.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/bottom/TabSwitcherBottomToolbarViewBinder.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/menu_button/MisesMenuButtonCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/top/MisesToolbarLayoutImpl.java",
  "//mises/android/java/org/chromium/chrome/browser/toolbar/top/MisesTopToolbarCoordinator.java",

]

mises_java_sources += [
  #"//mises/android/java/org/chromium/chrome/browser/ntp_background_images/NTPBackgroundImagesBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/app/MisesActivity.java",
  "//mises/android/java/org/chromium/chrome/browser/tabmodel/MisesTabCreator.java",
  "//mises/android/java/org/chromium/chrome/browser/tabbed_mode/MisesTabbedNavigationBarColorControllerBase.java",
  "//mises/android/java/org/chromium/chrome/browser/tabbed_mode/MisesTabbedRootUiCoordinator.java",
  "//mises/android/java/org/chromium/chrome/browser/notifications/MisesNotificationPlatformBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/MisesFeatureUtil.java",
  "//mises/android/java/org/chromium/chrome/browser/MisesRelaunchUtils.java",
  "//mises/android/java/org/chromium/chrome/browser/MisesLocalState.java",
  "//mises/android/java/org/chromium/chrome/browser/MisesIntentHandler.java",
  "//mises/android/java/org/chromium/chrome/browser/preferences/MisesPrefServiceBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/AppMenuBridge.java",
  "//mises/android/java/org/chromium/chrome/browser/crypto_wallet/BraveWalletProviderDelegateImplHelper.java",
  "//mises/android/java/org/chromium/chrome/browser/searchwidget/SearchWidgetProviderActivity.java",

  "//mises/android/java/org/chromium/chrome/browser/MisesFirebaseMessagingService.java",

]

mises_java_sources += mises_feed_java_sources

mises_java_sources += mises_public_tab_management_java_sources

mises_browser_ui_android_appmenu_internal_sources = [
  "//mises/browser/ui/android/appmenu/internal/java/src/org/chromium/chrome/browser/ui/appmenu/MisesAppMenu.java"
]
mises_browser_ui_android_toolbar_sources = [
  "//mises/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/bottom/MisesBottomControlsMediator.java",
  "//mises/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/BottomTabSwitcherActionMenuCoordinator.java",
  "//mises/browser/ui/android/toolbar/java/src/org/chromium/chrome/browser/toolbar/top/MisesToolbarLayout.java",

]
mises_java_base_sources = [
  "//mises/android/java/org/chromium/base/MisesReflectionUtil.java",
  "//mises/android/java/org/chromium/base/MisesPreferenceKeys.java",
  "//mises/android/java/org/chromium/base/Callbacks.java",
]
mises_java_base_module_sources = [
  "//mises/android/features/mises/java/org/chromium/chrome/browser/mises/MisesLCDService.java",
  "//mises/android/java/org/chromium/base/MisesAdsUtil.java",
  
]

mises_java_base_module_exception_deps = [
  "//third_party/android_deps:google_firebase_firebase_messaging_java",
]
mises_java_base_module_deps = [
  "//mises/third_party/android_deps:com_wireguard_android_java",
  "//mises/third_party/open_mediation:open_mediation_sdk_java",
  "//mises/third_party/open_mediation:open_mediation_cardslider_java",
  "//third_party/android_deps:playcore_java",
  "//third_party/androidx:androidx_core_core_java",
  "//third_party/androidx:androidx_lifecycle_lifecycle_viewmodel_java",
  "//third_party/android_deps:javax_inject_javax_inject_java",
  "//mises/third_party/android_deps:google_firebase_firebase_crashlytics_java",
  "//mises/third_party/android_deps:google_firebase_firebase_analytics_java", 
  "//mises/third_party/android_deps:google_firebase_firebase_messaging_java",
  "//mises/third_party/android_deps:google_play_services_measurement_api_java",
]

if (mises_enable_admob) {
  mises_java_base_module_deps += [
    "//mises/third_party/open_mediation:open_mediation_admob_adaptor_java",
  ]
}
if (mises_enable_facebook) {
  mises_java_base_module_deps += [
    "//mises/third_party/open_mediation:open_mediation_facebook_adaptor_java",
  ]
}
if (mises_enable_mintegral) {
  mises_java_base_module_deps += [
    "//mises/third_party/open_mediation:open_mediation_mintegral_adaptor_java",
  ]
}