import("//mises/build/config.gni")
import("//build/buildflag_header.gni")
import("//build/config/features.gni")
import("//chrome/common/features.gni")

buildflag_header("sparkle_buildflags") {
  header = "sparkle_buildflags.h"
  flags = [ "ENABLE_SPARKLE=$enable_sparkle" ]
}

if (enable_sparkle && !build_sparkle) {
  bundle_data("prebuilt_sparkle_framework_bundle_data") {
    sources = [ "//build/mac_files/sparkle_binaries/Sparkle.framework" ]
    outputs = [ "{{bundle_contents_dir}}/Frameworks/{{source_file_part}}" ]
  }
}

source_set("browser_process") {
  visibility = [
    "//mises/browser/*",
    "//chrome/browser/*",
  ]

  sources = [ "mises_browser_process.h" ]

  deps = [
    "//chrome/browser:browser_process",
    "//extensions/buildflags",
    "//mises/components/ipfs/buildflags",
#For IPFS
#    "//brave/browser/ethereum_remote_client/buildflags",
#    "//brave/components/brave_referrals/buildflags",
#    "//brave/components/greaselion/browser/buildflags",
    "//mises/components/ipfs/buildflags",
#    "//brave/components/speedreader/common:buildflags",
#    "//brave/components/tor/buildflags",
  ]
}

group("browser") {
  visibility = [
    "//mises:browser_dependencies",
    "//mises/browser/*",
    "//mises/test:*",
#For IPFS
#    "//brave/vendor/bat-native-ledger:headers",

    # these are layering violation and need to be fixed
#    "//brave/components/brave_ads/test:brave_ads_unit_tests",
#    "//brave/components/brave_rewards/browser:testutil",
#    "//brave/components/brave_rewards/test:brave_rewards_unit_tests",
#    "//brave/components/ipfs/test:*",
  ]

  if (enable_sparkle) {
    if (build_sparkle) {
      deps = [ "//mises/vendor/sparkle:sparkle_framework_bundle_data" ]
    } else {
      deps = [ ":prebuilt_sparkle_framework_bundle_data" ]
    }
  }

  # Group depending on upstream's counterpart to make it easier to manage
  # dependencies in mises/ (//chrome/browser does not depend on this target
  # so //mises/browser becomes essentially an alias for //chrome/browser now).
  public_deps = [ "//chrome/browser" ]
}

source_set("unit_tests") {
  testonly = true

  sources = []
  deps = []

  if (is_win) {
    sources += [ "default_protocol_handler_utils_win_unittest.cc" ]

    deps += [
      "//mises",
      "//mises/browser",
      "//testing/gtest",
    ]
  }
}
